Add JWT authentication